# fastapi-blog

./: .gitignore  README.md  auth.py  blog.db  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  snippets.txt  snippets2.txt
router/: post.py  user.py
templates/: account.html  layout.html
